@@ -1,0 +1,8 @@
+[SubtitleEditor Extension]
+_Name=Type Writer
+_Description=FIXME.
+Categorie=action
+Hidden=false
+Type=module
+Module=typewriter
+Authors=kitone <kitone at gna dot org>
